# mhxy_trade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: build.yml
backend/: Cargo.toml  deny.toml
backend/msg_server/: .env.example  Cargo.toml
backend/msg_server/src/: lib.rs  main.rs
backend/src/: main.rs
backend/trade_server/: Cargo.toml
backend/trade_server/src/: main.rs
frontend/: .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json
frontend/apps/manage/: eslint.config.mjs  next.config.ts  package.json
frontend/apps/manage/src/app/: globals.css  layout.tsx
frontend/apps/manage/src/app/(dashboard)/: layout.tsx
frontend/apps/manage/src/app/(dashboard)/dashboard/: page.tsx
frontend/apps/manage/src/app/(dashboard)/posts/: page.tsx
frontend/apps/manage/src/app/(dashboard)/users/: page.tsx
frontend/apps/manage/src/app/login/: page.tsx
frontend/apps/manage/src/components/audit/AuditActions/: index.tsx
frontend/apps/manage/src/components/audit/AuditDetail/: index.tsx
frontend/apps/manage/src/components/audit/AuditList/: index.tsx
frontend/apps/manage/src/hooks/: useAdminAuth.ts  useAuditActions.ts
frontend/apps/manage/src/providers/: AdminAuthProvider.tsx
frontend/apps/manage/src/services/: index.ts
frontend/apps/manage/src/stores/: useAdminStore.ts  useAuditStore.ts
frontend/apps/mobile/: eslint.config.js  package.json
frontend/apps/mobile/src/: App.tsx  main.tsx
frontend/apps/mobile/src/hooks/: useAuth.ts  useCountdown.ts  useInfiniteScroll.ts  usePullRefresh.ts
frontend/apps/mobile/src/pages/ContactRequests/: index.tsx
frontend/apps/mobile/src/pages/Home/: index.tsx
frontend/apps/mobile/src/pages/Login/: index.tsx
frontend/apps/mobile/src/pages/Mine/: index.tsx
frontend/apps/mobile/src/pages/MyFollows/: index.tsx
frontend/apps/mobile/src/pages/MyPosts/: index.tsx
frontend/apps/mobile/src/pages/Notifications/: index.tsx
frontend/apps/mobile/src/pages/PostCreate/: index.tsx
frontend/apps/mobile/src/pages/PostDetail/: index.tsx
frontend/apps/mobile/src/pages/PostEdit/: index.tsx
frontend/apps/mobile/src/pages/Profile/: index.tsx
frontend/apps/mobile/src/pages/Register/: index.tsx
frontend/apps/mobile/src/pages/Search/: index.tsx
frontend/apps/mobile/src/pages/Settings/: index.tsx
frontend/apps/mobile/src/router/: guards.tsx  index.tsx
frontend/apps/mobile/src/services/: index.ts
frontend/apps/mobile/src/stores/: useAuthStore.ts  usePostStore.ts  useUserStore.ts
frontend/apps/mobile/src/styles/: global.css
frontend/apps/pc/: next.config.ts  package.json
frontend/apps/pc/src/app/: globals.css  layout.tsx  page.tsx
frontend/apps/pc/src/app/notifications/: page.tsx
frontend/apps/pc/src/app/user/: layout.tsx  page.tsx
frontend/apps/pc/src/hooks/: useAuth.ts  useModal.ts
frontend/apps/pc/src/providers/: AuthProvider.tsx
frontend/apps/pc/src/services/: index.ts
frontend/apps/pc/src/stores/: useAuthStore.ts
questions/: 短信发送.md
specs/: 0001-spec-claude.md  0001-spec-codex.md  0001-spec-gemini.md  0002-implementation-plan.md  api.md  instructions.md
steps/: 20271223.md
(+79 files in other folders)
