[workspace]
members = [
  "msg_server",
  "trade_server",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["goo-yyh"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "multipart",
  "stream",
  "default-tls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.10.0", features = ["v4", "v7", "serde"] }
