[package]
name = "msg_server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
base64 = "0.22.1"
chrono = { workspace = true }
hmac = "0.12"
reqwest = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.10"
tokio = { workspace = true }
url = "2.5"
uuid = { workspace = true }
