[package]
name = "trade_server"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.7", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
  "macros",
] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
chrono = { workspace = true }
reqwest = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
] }
thiserror = "2.0.17"
tokio = { workspace = true }
tower = "0.5.3"
tower-http = { version = "0.6.1", features = [
  "compression-full",
  "cors",
  "fs",
  "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { workspace = true }
